[gd_scene load_steps=4 format=3 uid="uid://bkqm36ehhqyxk"]

[ext_resource type="Script" path="res://scripts/TouchScreenButton.gd" id="1_ofvg8"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8lqeu"]
load_path = "res://.godot/imported/button_still.jpg-431630d5f42bf194a0e014d85ce53691.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hl7ch"]
load_path = "res://.godot/imported/button_pressed.jpg-84a1e525aa790e9d373f32567193e527.ctex"

[node name="SoundButton" type="TouchScreenButton"]
texture_normal = SubResource("CompressedTexture2D_8lqeu")
texture_pressed = SubResource("CompressedTexture2D_hl7ch")
script = ExtResource("1_ofvg8")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(312, 600)
visible = true
ok_button_text = "Open"
file_mode = 0
root_subfolder = "souds"
filters = PackedStringArray("*.wav")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="released" from="." to="." method="_on_released"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
